crates/ferrum-interfaces/tests/ui/vnext/fail/bound_operation_provider_cannot_be_constructed.rs
use ferrum_interfaces::vnext::*;

fn forge<R: DeviceRuntime>(
    provider: &'static dyn OperationProvider<R>,
    plan_id: PlanId,
    plan_hash: PlanHash,
    node_id: NodeId,
) {
    let _ = BoundOperationProvider {
        provider,
        plan_id,
        plan_hash,
        node_id,
    };
}

fn main() {}
